--- a/token-lending/js/package.json
+++ b/token-lending/js/package.json
@@ -52,7 +52,7 @@
         "@typescript-eslint/parser": "^5.16.0",
         "eslint": "^8.12.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^5.0.0-alpha.1",
         "gh-pages": "^5.0.0",
         "prettier": "^3.0.0",
         "rollup": "^3.22.0",
