tlv: Remove borsh dependency via `UnsizedPack`

--- a/token-metadata/interface/Cargo.toml
+++ b/token-metadata/interface/Cargo.toml
@@ -12,7 +12,7 @@ borsh = "0.10"
 solana-program = "1.16.1"
 spl-discriminator = { version = "0.1.0" , path = "../../libraries/discriminator" }
 spl-program-error = { version = "0.2.0" , path = "../../libraries/program-error" }
-spl-type-length-value = { version = "0.2.0", features = ["borsh"], path = "../../libraries/type-length-value" }
+spl-type-length-value = { version = "0.2.0", path = "../../libraries/type-length-value" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
