--- a/token/program-2022/Cargo.toml
+++ b/token/program-2022/Cargo.toml
@@ -29,6 +29,7 @@ spl-memo = { version = "4.0.0", path = "../../memo/program", features = [ "no-en
 spl-token = { version = "4.0",  path = "../program", features = ["no-entrypoint"] }
 spl-token-metadata-interface = { version = "0.1.0", path = "../../token-metadata/interface" }
 spl-transfer-hook-interface = { version = "0.1.0", path = "../transfer-hook-interface" }
+spl-type-length-value = { version = "0.2.0", path = "../../libraries/type-length-value" }
 thiserror = "1.0"
 serde = { version = "1.0.168", optional = true }
 serde_with = { version = "2.0.0", optional = true }
