--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -10,9 +10,11 @@ version = "0.5.1"
 [dependencies]
 async-trait = "0.1"
 futures-util = "0.3"
+solana-banks-interface = "1.16.3"
 solana-cli-output = { version = "1.16.3", optional = true }
 solana-program-test = "1.16.3"
 solana-rpc-client = "1.16.3"
+solana-rpc-client-api = "1.16.3"
 solana-sdk = "1.16.3"
 # We never want the entrypoint for ATA, but we want the entrypoint for token when
 # testing token
