--- a/libraries/discriminator/derive/Cargo.toml
+++ b/libraries/discriminator/derive/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 [dependencies]
 quote = "1.0"
 spl-discriminator-syn = { version = "0.1.0", path = "../syn" }
-syn = { version = "2.0", features = ["full"] }
+syn = "2.0"
 
 [lib]
 proc-macro = true
