--- a/libraries/discriminator/syn/Cargo.toml
+++ b/libraries/discriminator/syn/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 proc-macro2 = "1.0"
 quote = "1.0"
 solana-program = "1.16.1"
-syn = { version = "2.0", features = ["full"] }
+syn = "2.0"
 thiserror = "1.0"
 
 [lib]
