--- a/token/program-2022/Cargo.toml
+++ b/token/program-2022/Cargo.toml
@@ -33,6 +33,7 @@ spl-type-length-value = { version = "0.2.0", path = "../../libraries/type-length
 thiserror = "1.0"
 serde = { version = "1.0.168", optional = true }
 serde_with = { version = "2.0.0", optional = true }
+base64 = "0.21.2"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
