--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
   "libraries/program-error",
   "libraries/tlv-account-resolution",
   "libraries/type-length-value",
+  "libraries/type-length-value-derive-test",
   "memo/program",
   "name-service/program",
   "managed-token/program",
