--- a/interfaces/token-metadata/example/Cargo.toml
+++ b/interfaces/token-metadata/example/Cargo.toml
@@ -13,14 +13,14 @@ test-sbf = []
 
 [dependencies]
 solana-program = "1.16.3"
-spl-token-2022 = { version = "0.7", path = "../../token/program-2022" }
+spl-token-2022 = { version = "0.7", path = "../../../token/program-2022" }
 spl-token-metadata-interface = { version = "0.1.0", path = "../interface" }
-spl-type-length-value = { version = "0.2.0" , path = "../../libraries/type-length-value" }
+spl-type-length-value = { version = "0.2.0" , path = "../../../libraries/type-length-value" }
 
 [dev-dependencies]
 solana-program-test = "1.16.3"
 solana-sdk = "1.16.3"
-spl-token-client = { version = "0.5", path = "../../token/client" }
+spl-token-client = { version = "0.5", path = "../../../token/client" }
 test-case = "3.1"
 
 [lib]
