--- a/interfaces/token-metadata/interface/Cargo.toml
+++ b/interfaces/token-metadata/interface/Cargo.toml
@@ -10,9 +10,9 @@ edition = "2021"
 [dependencies]
 borsh = "0.10"
 solana-program = "1.16.3"
-spl-discriminator = { version = "0.1.0" , path = "../../libraries/discriminator" }
-spl-program-error = { version = "0.2.0" , path = "../../libraries/program-error" }
-spl-type-length-value = { version = "0.2.0", path = "../../libraries/type-length-value" }
+spl-discriminator = { version = "0.1.0" , path = "../../../libraries/discriminator" }
+spl-program-error = { version = "0.2.0" , path = "../../../libraries/program-error" }
+spl-type-length-value = { version = "0.2.0", path = "../../../libraries/type-length-value" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
