--- a/examples/rust/transfer-tokens/program/Cargo.toml
+++ b/examples/rust/transfer-tokens/program/Cargo.toml
@@ -13,7 +13,7 @@ test-sbf = []
 
 [dependencies]
 solana-program = "1.16.3"
-spl-token = { version = "4.0", path = "../../../token/program", features = [ "no-entrypoint" ] }
+spl-token = { version = "4.0", path = "../../../../token/program", features = [ "no-entrypoint" ] }
 
 [dev-dependencies]
 solana-program-test = "1.16.3"
