--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ members = [
   "associated-token-account/program-test",
   "binary-option/program",
   "binary-oracle-pair/program",
+  "editions/example",
+  "editions/interface",
   "examples/rust/cross-program-invocation",
   "examples/rust/custom-heap",
   "examples/rust/logging",
