--- a/.github/workflows/pull-request-examples.yml
+++ b/.github/workflows/pull-request-examples.yml
@@ -57,5 +57,20 @@ jobs:
           ./ci/install-program-deps.sh
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
-      - name: Build and test
-        run: ./ci/cargo-test-sbf.sh examples/rust
+      - name: Build and test CPI
+        run: ./ci/cargo-test-sbf.sh examples/rust/cross-program-invocation
+
+      - name: Build and test custom heap
+        run: ./ci/cargo-test-sbf.sh examples/rust/custom-heap
+
+      - name: Build and test logging
+        run: ./ci/cargo-test-sbf.sh examples/rust/logging
+
+      - name: Build and test sysvar
+        run: ./ci/cargo-test-sbf.sh examples/rust/sysvar
+
+      - name: Build and test transfer-lamports
+        run: ./ci/cargo-test-sbf.sh examples/rust/transfer-lamports
+
+      - name: Build and test transfer-tokens
+        run: ./ci/cargo-test-sbf.sh examples/rust/transfer-tokens
