--- a/.github/workflows/pull-request-account-compression.yml
+++ b/.github/workflows/pull-request-account-compression.yml
@@ -6,11 +6,14 @@ on:
       - "account-compression/**"
       - "libraries/concurrent-merkle-tree/**"
       - "ci/*-version.sh"
+      - ".github/workflows/pull-request-account-compression.yml"
   push:
     branches: [master]
     paths:
       - "account-compression/**"
+      - "libraries/concurrent-merkle-tree/**"
       - "ci/*-version.sh"
+      - ".github/workflows/pull-request-account-compression.yml"
 
 jobs:
   cargo-test-sbf:
@@ -55,9 +58,6 @@ jobs:
           ./ci/install-program-deps.sh
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
 
-      - name: Build and test
-        run: ./ci/cargo-test-sbf.sh
-
       - name: Upload programs
         uses: actions/upload-artifact@v2
         with:
@@ -65,7 +65,7 @@ jobs:
           path: "target/deploy/*.so"
           if-no-files-found: error
 
-  js-test:
+  js-test-account-compression:
     runs-on: ubuntu-latest
     env:
       NODE_VERSION: 16.x
