--- a/.github/workflows/pull-request-account-compression.yml
+++ b/.github/workflows/pull-request-account-compression.yml
@@ -6,6 +6,7 @@ on:
       - "account-compression/**"
       - "libraries/concurrent-merkle-tree/**"
       - "ci/*-version.sh"
+      - "ci/anchor-cliversion.sh"
       - ".github/workflows/pull-request-account-compression.yml"
   push:
     branches: [master]
@@ -13,6 +14,7 @@ on:
       - "account-compression/**"
       - "libraries/concurrent-merkle-tree/**"
       - "ci/*-version.sh"
+      - "ci/anchor-cliversion.sh"
       - ".github/workflows/pull-request-account-compression.yml"
 
 jobs:
