--- a/stake-pool/single-pool-js/package.json
+++ b/stake-pool/single-pool-js/package.json
@@ -1,6 +1,14 @@
 {
+    "scripts": {
+        "build": "pnpm tsc",
+        "lint": "eslint --max-warnings 0 .",
+        "lint:fix": "eslint . --fix"
+    },
     "type": "module",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^5.0.0",
         "typescript": "^5.1.6"
     },
     "dependencies": {
