--- a/.github/workflows/pull-request-account-compression.yml
+++ b/.github/workflows/pull-request-account-compression.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: account-compression-programs
-          path: "target/deploy/*.so"
+          path: "account-compression/target/deploy/*.so"
           if-no-files-found: error
 
   js-test-account-compression:
@@ -90,5 +90,5 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: account-compression-programs
-          path: target/deploy
+          path: account-compression/target/deploy
       - run: ./ci/js-test-account-compression.sh
