--- a/governance/chat/program/Cargo.toml
+++ b/governance/chat/program/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spl-governance-chat"
-version = "0.2.7"
+version = "0.2.8"
 description = "Solana Program Library Governance Chat Program"
 authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
@@ -20,10 +20,14 @@ num-traits = "0.2"
 serde = "1.0.181"
 serde_derive = "1.0.103"
 solana-program = "1.16.3"
-spl-token = { version = "4.0", path = "../../../token/program", features = [ "no-entrypoint" ] }
-spl-governance= { version = "3.1.1", path ="../../program", features = [ "no-entrypoint" ]}
-spl-governance-tools= { version = "0.1.3", path ="../../tools"}
-spl-governance-addin-api= { version = "0.1.3", path ="../../addin-api"}
+spl-token = { version = "4.0", path = "../../../token/program", features = [
+    "no-entrypoint",
+] }
+spl-governance = { version = "3.1.1", path = "../../program", features = [
+    "no-entrypoint",
+] }
+spl-governance-tools = { version = "0.1.3", path = "../../tools" }
+spl-governance-addin-api = { version = "0.1.3", path = "../../addin-api" }
 thiserror = "1.0"
 
 
@@ -32,8 +36,8 @@ assert_matches = "1.5.0"
 proptest = "1.2"
 solana-program-test = "1.16.3"
 solana-sdk = "1.16.3"
-spl-governance-test-sdk = { version = "0.1.3", path ="../../test-sdk"}
-spl-governance-addin-mock = { version = "0.1.3", path ="../../addin-mock/program"}
+spl-governance-test-sdk = { version = "0.1.3", path = "../../test-sdk" }
+spl-governance-addin-mock = { version = "0.1.3", path = "../../addin-mock/program" }
 
 
 [lib]
