ci: Test purging more packages

--- a/.github/workflows/pull-request-stake-pool.yml
+++ b/.github/workflows/pull-request-stake-pool.yml
@@ -6,6 +6,7 @@ on:
     - 'stake-pool/**'
     - 'token/**'
     - 'ci/*-version.sh'
+    - 'ci/warning/purge-ubuntu-runner.sh'
     - '.github/workflows/pull-request-stake-pool.yml'
   push:
     branches: [master]
@@ -13,6 +14,7 @@ on:
     - 'stake-pool/**'
     - 'token/**'
     - 'ci/*-version.sh'
+    - 'ci/warning/purge-ubuntu-runner.sh'
     - '.github/workflows/pull-request-stake-pool.yml'
 
 jobs:
