--- a/feature-gate/cli/Cargo.toml
+++ b/feature-gate/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spl-feature-gate-cli"
-version = "1.2.0"
+version = "1.0.0"
 description = "SPL Feature Gate Command-line Utility"
 authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
@@ -9,11 +9,11 @@ edition = "2021"
 
 [dependencies]
 clap = "2.33.3"
-solana-clap-utils = "1.16.3"
-solana-cli-config = "1.16.3"
-solana-client = "1.16.3"
-solana-logger = "1.16.3"
-solana-sdk = "1.16.3"
+solana-clap-utils = "=1.16.3"
+solana-cli-config = "=1.16.3"
+solana-client = "=1.16.3"
+solana-logger = "=1.16.3"
+solana-sdk = "=1.16.3"
 spl-feature-gate = { version = "0.0.1", path = "../program", features = ["no-entrypoint"] }
 
 [[bin]]
