--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,9 @@ members = [
   "managed-token/program",
   "record/program",
   "shared-memory/program",
+  "single-pool/cli",
+  "single-pool/program",
   "stake-pool/cli",
-  "stake-pool/single-pool",
-  "stake-pool/single-pool-cli",
   "stake-pool/program",
   "stateless-asks/program",
   "token-lending/cli",
