--- a/single-pool/cli/Cargo.toml
+++ b/single-pool/cli/Cargo.toml
@@ -30,7 +30,7 @@ solana-vote-program = "=1.16.3"
 spl-token = { version = "4.0", path="../../token/program", features = [ "no-entrypoint" ] }
 spl-token-client = { version = "0.5", path="../../token/client" }
 spl-associated-token-account = { version = "2.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
-spl-single-validator-pool = { version = "1.0.0", path="../single-pool", features = [ "no-entrypoint" ] }
+spl-single-validator-pool = { version = "1.0.0", path="../program", features = [ "no-entrypoint" ] }
 
 [dev-dependencies]
 solana-test-validator = "=1.16.3"
