--- a/single-pool/js/package.json
+++ b/single-pool/js/package.json
@@ -2,18 +2,32 @@
     "scripts": {
         "build": "pnpm tsc",
         "lint": "eslint --max-warnings 0 .",
-        "lint:fix": "eslint . --fix"
+        "lint:fix": "eslint . --fix",
+        "test": "ava"
     },
     "type": "module",
     "devDependencies": {
+        "@ava/typescript": "^4.1.0",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "ava": "^5.3.1",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "solana-bankrun": "^0.1.1",
+        "ts-node": "^10.9.1",
+        "tsx": "^3.12.7",
         "typescript": "^5.1.6"
     },
     "dependencies": {
         "@solana/buffer-layout": "^4.0.1",
         "@solana/spl-token": "^0.3.8",
         "@solana/web3.js": "^1.78.0"
+    },
+    "ava": {
+        "extensions": {
+            "ts": "module"
+        },
+        "nodeArguments": [
+            "--loader=tsx"
+        ]
     }
 }
