group interface spec

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ members = [
   "stake-pool/cli",
   "stake-pool/program",
   "stateless-asks/program",
+  "token-group/example",
+  "token-group/interface",
   "token-lending/cli",
   "token-lending/program",
   "token-metadata/example",
