--- a/libraries/type-length-value/Cargo.toml
+++ b/libraries/type-length-value/Cargo.toml
@@ -17,6 +17,7 @@ solana-program = "1.16.3"
 spl-discriminator = { version = "0.1.0", path = "../discriminator" }
 spl-program-error = { version = "0.2.0", path = "../program-error" }
 spl-type-length-value-derive = { version = "0.1.0", path = "./derive", optional = true }
+spl-pod = { version = "0.1.0", path = "../pod" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
