--- a/token-metadata/example/Cargo.toml
+++ b/token-metadata/example/Cargo.toml
@@ -16,6 +16,7 @@ solana-program = "1.16.3"
 spl-token-2022 = { version = "0.7", path = "../../token/program-2022" }
 spl-token-metadata-interface = { version = "0.1.0", path = "../interface" }
 spl-type-length-value = { version = "0.2.0" , path = "../../libraries/type-length-value" }
+spl-pod = { version = "0.1.0", path = "../../libraries/pod" }
 
 [dev-dependencies]
 solana-program-test = "1.16.3"
