--- a/token/program-2022/Cargo.toml
+++ b/token/program-2022/Cargo.toml
@@ -11,7 +11,7 @@ exclude = ["js/**"]
 [features]
 no-entrypoint = []
 test-sbf = []
-serde-traits = ["serde", "serde_with", "base64"]
+serde-traits = ["serde", "serde_with", "base64", "spl-pod/serde-traits"]
 # Remove these features once the underlying syscalls are released on all networks
 default = ["zk-ops"]
 zk-ops = []
@@ -30,6 +30,7 @@ spl-token = { version = "4.0",  path = "../program", features = ["no-entrypoint"
 spl-token-metadata-interface = { version = "0.1.0", path = "../../token-metadata/interface" }
 spl-transfer-hook-interface = { version = "0.1.0", path = "../transfer-hook-interface" }
 spl-type-length-value = { version = "0.2.0", path = "../../libraries/type-length-value" }
+spl-pod = { version = "0.1.0", path = "../../libraries/pod" }
 thiserror = "1.0"
 serde = { version = "1.0.188", optional = true }
 serde_with = { version = "3.3.0", optional = true }
