--- a/token/transfer-hook-interface/Cargo.toml
+++ b/token/transfer-hook-interface/Cargo.toml
@@ -17,6 +17,7 @@ solana-program = "1.16.3"
 spl-discriminator = { version = "0.1.0" , path = "../../libraries/discriminator" }
 spl-tlv-account-resolution = { version = "0.2.0" , path = "../../libraries/tlv-account-resolution" }
 spl-type-length-value = { version = "0.2.0" , path = "../../libraries/type-length-value" }
+spl-pod = { version = "0.1.0", path = "../../libraries/pod" }
 thiserror = "1.0"
 
 [lib]
