--- a/token/cli/Cargo.toml
+++ b/token/cli/Cargo.toml
@@ -29,6 +29,7 @@ solana-transaction-status = "=1.16.3"
 spl-token = { version = "4.0", path="../program", features = [ "no-entrypoint" ] }
 spl-token-2022 = { version = "0.7", path="../program-2022", features = [ "no-entrypoint" ] }
 spl-token-client = { version = "0.5", path="../client" }
+spl-token-metadata-interface = { version = "0.1", path="../../token-metadata/interface" }
 spl-associated-token-account = { version = "2.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
 spl-memo = { version = "4.0.0", path="../../memo/program", features = ["no-entrypoint"] }
 strum = "0.25"
