single-pool: js (#5033)

--- a/.github/workflows/pull-request-single-pool.yml
+++ b/.github/workflows/pull-request-single-pool.yml
@@ -114,3 +114,24 @@ jobs:
         run: |
           cargo build --manifest-path ./single-pool/cli/Cargo.toml
           cargo test --manifest-path ./single-pool/cli/Cargo.toml
+
+  js-test:
+    runs-on: ubuntu-latest
+    env:
+      NODE_VERSION: 18.x
+    needs: cargo-test-sbf
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - name: Download programs
+        uses: actions/download-artifact@v2
+        with:
+          name: single-pool-programs
+          path: target/deploy
+      - run: ./ci/js-test-single-pool.sh
