--- a/libraries/tlv-account-resolution/Cargo.toml
+++ b/libraries/tlv-account-resolution/Cargo.toml
@@ -12,10 +12,12 @@ test-sbf = []
 
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
+num-derive = "0.4.0"
+num-traits = "0.2.16"
 solana-program = "1.16.3"
 spl-discriminator = { version = "0.1", path = "../discriminator" }
-spl-program-error = { version = "0.2.0", path = "../program-error" }
 spl-type-length-value = { version = "0.2", path = "../type-length-value" }
+thiserror = "1.0.47"
 
 [dev-dependencies]
 solana-program-test = "1.16.3"
