--- a/libraries/type-length-value/Cargo.toml
+++ b/libraries/type-length-value/Cargo.toml
@@ -13,10 +13,12 @@ derive = ["dep:spl-type-length-value-derive"]
 
 [dependencies]
 bytemuck = { version = "1.13.1", features = ["derive"] }
+num-derive = "0.4.0"
+num-traits = "0.2.16"
 solana-program = "1.16.3"
 spl-discriminator = { version = "0.1.0", path = "../discriminator" }
-spl-program-error = { version = "0.2.0", path = "../program-error" }
 spl-type-length-value-derive = { version = "0.1.0", path = "./derive", optional = true }
+thiserror = "1.0.47"
 
 [lib]
 crate-type = ["cdylib", "lib"]
