--- a/token-metadata/interface/Cargo.toml
+++ b/token-metadata/interface/Cargo.toml
@@ -14,9 +14,11 @@ serde-traits = ["serde"]
 borsh = "0.10"
 solana-program = "1.16.3"
 spl-discriminator = { version = "0.1.0" , path = "../../libraries/discriminator" }
-spl-program-error = { version = "0.2.0" , path = "../../libraries/program-error" }
 spl-type-length-value = { version = "0.2.0", path = "../../libraries/type-length-value" }
 serde = { version = "1.0.188", optional = true }
+thiserror = "1.0.47"
+num-traits = "0.2.16"
+num-derive = "0.4.0"
 
 [dev-dependencies]
 serde_json = "1.0.105"
