update dependency to `clap-v3` and `solana-clap-v3-utils`

--- a/token/cli/Cargo.toml
+++ b/token/cli/Cargo.toml
@@ -12,13 +12,13 @@ version = "3.1.0"
 walkdir = "2"
 
 [dependencies]
-clap = "2.33.3"
+clap = "3.2.23"
 console = "0.15.7"
 serde = "1.0.188"
 serde_derive = "1.0.103"
 serde_json = "1.0.105"
 solana-account-decoder = "=1.16.3"
-solana-clap-utils = "=1.16.3"
+solana-clap-v3-utils = "=1.16.3"
 solana-cli-config = "=1.16.3"
 solana-cli-output = "=1.16.3"
 solana-client = "=1.16.3"
