--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -16,7 +16,7 @@ on:
     - '.github/workflows/pull-request-token.yml'
 
 jobs:
-  cargo-build-sbf:
+  cargo-test-sbf:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -39,7 +39,7 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-          key: cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUST_STABLE}}-sbf
+          key: cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUST_STABLE}}
 
       - uses: actions/cache@v2
         with:
@@ -62,12 +62,12 @@ jobs:
           echo "HANA after deps"
           df -h
 
-      - name: Build token
+      - name: Build and test token
         run: |
-          echo "HANA before build"
+          echo "HANA before test"
           df -h
-          ./ci/cargo-build-sbf.sh token
-          echo "HANA after build"
+          ./ci/cargo-test-sbf.sh token
+          echo "HANA after test"
           df -h
 
       - name: Upload programs
@@ -76,61 +76,6 @@ jobs:
           name: token-programs
           path: "target/deploy/*.so"
           if-no-files-found: error
-
-  cargo-test-sbf:
-    runs-on: ubuntu-latest
-    needs: [cargo-build-sbf, cargo-test-sbf-associated-token-account]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set env vars
-        run: |
-          source ci/rust-version.sh
-          echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
-          source ci/solana-version.sh
-          echo "SOLANA_VERSION=$solana_version" >> $GITHUB_ENV
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ env.RUST_STABLE }}
-          override: true
-          profile: minimal
-
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUST_STABLE}}-x64
-
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/bin/rustfilt
-          key: cargo-sbf-bins-${{ runner.os }}
-
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/solana
-          key: solana-${{ env.SOLANA_VERSION }}
-
-      - name: Install dependencies
-        run: |
-          echo "HANA before deps"
-          df -h
-          ./ci/install-build-deps.sh
-          ./ci/install-program-deps.sh
-          echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
-          echo "HANA after deps"
-          df -h
-
-      - name: Test token
-        run: |
-          echo "HANA before test"
-          df -h
-          ./ci/cargo-test-sbf.sh token
-          echo "HANA after test"
-          df -h
 
   cargo-test-token-2022-serde:
     runs-on: ubuntu-latest
@@ -314,7 +259,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_VERSION: 16.x
-    needs: [cargo-build-sbf, cargo-test-sbf-associated-token-account]
+    needs: [cargo-test-sbf, cargo-test-sbf-associated-token-account]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ env.NODE_VERSION }}
