--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           echo "HANA before everything"
           df -h
-          du -sh /*
-          find / -type f -size +1G
+          sudo du -sh /*
+          sudo find / -type f -size +1G
           source ci/rust-version.sh
           echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
           source ci/solana-version.sh
