--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo "HANA before everything"
           df -h
-          sudo du -sh /*
+          sudo du -sh /usr/* /var/* /home/* /imagegeneration/*
           sudo find / -type f -size +1G
           source ci/rust-version.sh
           echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
