--- a/libraries/type-length-value/js/package.json
+++ b/libraries/type-length-value/js/package.json
@@ -62,6 +62,7 @@
         "mocha": "^10.1.0",
         "prettier": "^3.0.0",
         "shx": "^0.3.4",
+        "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
     }
 }
